examples/thread/klee-out-1/test000001.pc
array mm[4] : w32 -> w8 = symbolic
array model_version[4] : w32 -> w8 = symbolic
(query [(Eq 1
            (ReadLSB w32 0 model_version))
        (Eq false
            (Eq 77
                (ReadLSB w32 0 mm)))]
       false)
